# stratum-lab

./: .gitignore  Dockerfile  Dockerfile.stratum-lab  LAUNCH_CHECKLIST.md  crewai_repos.txt  pyproject.toml  repos_machine_a.txt  repos_machine_b.txt  requirements-docker.txt  run_repo.sh  selected_repos.jsonl  selected_repos_nodedup.jsonl  selected_repos_v2.jsonl  selected_repos_v2_A.jsonl  selected_repos_v2_B.jsonl  synthetic_test.py  test_final.sh  validate_smoke.py
eval/: test_audit_risk_model.py  test_defensive_patterns.py  test_end_to_end.py  test_enrichment_pipeline.py  test_event_schema.py  test_export.py  test_failure_classification.py  test_graph_overlay.py  test_input_generator.py  test_integration_bridge.py  test_integration_semantic_pipeline.py  test_judge.py  test_knowledge_base.py  test_module_summary.py  test_patcher_smoke.py  test_patchers.py  test_permissions_cost.py  test_pipeline_integration.py  test_privacy_topology.py  test_query_demo.py  test_remediation_mining.py  test_repo_selection.py  test_scan_data_topology.py  test_semantic_analysis.py  test_synthetic_execution.py
output/: compile_check_final.json  data_integrity_validation.json  deploy.sh  preflight_checklist.md  production_validation.json
scripts/: aggregate_results.py  analyze_semantics.py  build_behavioral_records.py  check_pilot_quality.py  compute_enrichments.py  compute_risk_model.py  ecosystem_report.py  evaluate_tiers.py  graph_builder.py  inject_main.py  mine_remediations.py  orchestrate.sh  output_classifier.py  risk_analyzer.py  run_judge.sh  run_scan.ps1  run_scan.sh  (+11 more)
(+360 files in other folders)
